2005-09-27  Roger Leigh  <rleigh@debian.org>

	* schroot/sbuild-config.c (sbuild_config_load): Report GError
	messages propagated by locking failure.

	* schroot/sbuild-lock.c
	(sbuild_lock_set_lock): Return errors as a GError, rather than
	aborting.  Don't run fcntl in a while loop now that timeouts are
	implemented with an itimer.
	(sbuild_lock_unset_lock): Return errors as a GError.
	(sbuild_lock_error_quark): New function.

	* schroot/sbuild-lock.h (SBUILD_LOCK_ERROR): Add error domain.
	Add locking errors as SbuildLockError enum.

2005-09-27  Roger Leigh  <rleigh@debian.org>

	* schroot/schroot.conf.5.in: Update documentation.

	* schroot/sbuild-chroot.c (sbuild_chroot_class_init): The
	run-session-scripts property defaults to FALSE, for compatibility
	with dchroot out-of-the-box.

2005-09-27  Roger Leigh  <rleigh@debian.org>

	* Update documentation.

	* schroot/sbuild-config.c (sbuild_config_load): Acquire a read
	lock while reading schroot.conf.

	* schroot/schroot.h: Add sbuild-lock.h.

	* schroot/Makefile.am: Add sbuild-lock.[ch].

	* schroot/sbuild-lock.[ch]: New file, implementing simple
	whole-file advisory locking primitives.

2005-09-25  Roger Leigh  <rleigh@debian.org>

	* schroot/setup/00check: Remove "session-start" check.

	* schroot/session/00check: Remove duplicate "session-start" check.

	* schroot/session/50sbuild: New script to set up sbuild build
	directory and fix its ownership and permissions.

2005-09-25  Roger Leigh  <rleigh@debian.org>

	* schroot/schroot.1.in: Document new session.d directory.

	* schroot/schroot.conf.5.in: Document run-setup-scripts and
	run-session-scripts options.

	* schroot/sbuild-chroot.c (sbuild_chroot_class_init): Replace
	run-setup property and associated accessors with two new
	properties, run-setup-scripts and run-session-scripts and
	associated accessors.  Setup script are not run by default,
	whereas session scripts are.

	* schroot/sbuild-chroot.h (struct _SbuildChroot): Replace